# cell-AAP

./: .gitignore  CCSN_napari_gui.py  README.md  napari_nn_gui.py  setup.cfg
cell_AAP/: configs.py  defaults.py
cell_AAP/annotation/: annotation_utils.py  annotator.py  dataset_write.py
cell_AAP/core/: inference_core.py
cell_AAP/data_module/: annotation_utils.py
cell_AAP/napari/: analysis.py  fileio.py  graphing.py  main.py  sub_widgets.py  ui.py
cell_AAP/napari_dataset/: README.md  config_editor.py  fileio.py  main.py  results_viewer.py  ui.py
cell_AAP/scripts/: batch_inference.py  inference.py  time_in_mitosis.py  time_in_mitosis_graphing.py
cell_SAP/data_module/: annotation_utils.py  annotator.py  data_utils.py  dataset_convert.py  dataset_write.py
cell_SAP/data_module/.ipynb_checkpoints/: data_utils-checkpoint.py  data_write-checkpoint.py
coco_conv_dataset_1.1/test/: instances_cellseg_test_1.1.json
coco_conv_dataset_1.1/train/: instances_cellseg_train_1.1.json
coco_conv_dataset_1.1/val/: instances_cellseg_val_1.1.json
data/: data_utils.py
data_module/: __init__.py  data_utils.py  data_write.py
metrics/: metricdf_HeLa.npy  metriclabels_HeLa.npy
napari/: CCSN_napari_gui.py
notebooks/: contours.ipynb  example.ipynb  method_eval.ipynb
notebooks/tutorials/inference/: inference.ipynb
notebooks/tutorials/training/: config.yaml  training.py  training.sh
notebooks/tutorials/training/example_dataset/train/: example_dataset_train.json
