[metadata]
name = cell-AAP
version = 1.0.1
long_description = file: README.md
long_description_content_type = text/markdown
author = Anish Virdi
license = MIT

classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires  = <3.13, >=3.11
install_requires =
    napari[all] >= 0.4.19
    numpy >= 1.23, < 2.0
    opencv-python >= 4.9.0
    tifffile >= 2024.2.12
    torch >= 2.3.1
    torchvision >= 0.18.1
    scikit-image>=0.23.2,<0.26.0
    qtpy >= 2.4.1
    pillow >= 10.3.0
    scipy >= 1.12.0
    timm >= 1.0.7
    pandas >= 2.2.2
    superqt >= 0.6.3
    btrack >= 0.6.5
    seaborn >= 0.13.2
    openpyxl >= 3.1.4
    joblib >= 1.0
    scikit-learn>=0.22
    # cython is not required at runtime; avoid pinning to reduce conflicts
    segment-anything>=1.0
    pycocotools>=2.0.7
    lxml>=4.9.0
    lxml_html_clean>=0.1.0




[options.entry_points]
napari.manifest =
    cell-AAP-gui = cell_AAP:napari.yaml

[options.packages.find]
exclude =
    cell_AAP.data_module.pycococreator*
