[metadata]
name = cell-AAP
version = 1.0.5
long_description = file: README.md
long_description_content_type = text/markdown
author = Anish Virdi
license = MIT
classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.11,<3.13
install_requires =
    napari[all] >= 0.4.19
    numpy >= 1.23, < 2.0
    # Full opencv with GUI backends
    opencv-python >= 4.9.0
    tifffile >= 2024.2.12
    scikit-image >= 0.23.2, < 0.26.0
    qtpy >= 2.4.1
    pillow >= 10.3.0
    scipy >= 1.12.0
    timm >= 1.0.7
    pandas >= 2.2.2
    superqt >= 0.6.3
    btrack >= 0.6.5
    seaborn >= 0.13.2
    openpyxl >= 3.1.4
    joblib >= 1.0
    scikit-learn >= 0.22
    segment-anything >= 1.0
    pycocotools >= 2.0.7
    lxml >= 4.9.0
    lxml_html_clean >= 0.1.0

# Torch and torchvision are optional extras to avoid forcing a pip wheel that bundles libomp
[options.extras_require]
torch =
    # For non-macOS platforms where pip wheels are acceptable:
    torch >= 2.3.1; platform_system != "Darwin"
    torchvision >= 0.18.1; platform_system != "Darwin"
torch-macos =
    # On macOS, recommend installing via conda; keep extras empty to avoid pip pulling wheels that bundle libomp
    # (left intentionally blank)
    # users follow docs: `conda install -c pytorch -c conda-forge pytorch torchvision`
full =
    %(torch)s

[options.entry_points]
napari.manifest =
    cell-AAP-gui = cell_AAP:napari.yaml

